--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,25 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Some Tool</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Some Tool</title>
+	</head>
+	<body>
+		<div id="root"></div>
+		<script type="module" src="/src/main.jsx"></script>
+		<script>
+			// Set theme based on local storage
+			// Initial theme is light
+			(function () {
+				let theme = localStorage.getItem('theme');
+				if (!theme) {
+					theme = 'light';
+					localStorage.setItem('theme', theme);
+				}
+				document.documentElement.setAttribute('data-theme', theme);
+			})();
+		</script>
+	</body>
 </html>
