--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
+		<!-- INSERT ICON HERE -->
+		<link
+			rel="icon"
+			type="image/svg+xml"
+			href="https://placehold.co/80x80?text=?"
+		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Some Tool</title>
 	</head>
